task5/yaml/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netpol
  labels:
    task: "task5"
